Python KX_lightObject.distance method incorrectly updating energy not distance #41204

Closed
opened 2014-07-27 12:14:19 +02:00 by Jon Szabo · 7 comments

System Information
Ubuntu 14.04 and Windows 7 32-bit
Graphics card Nvidia 8800 gtx

Blender Version
Broken: 2.71 official release and newer (698a9a2)
Worked: 2.70a

Short description of error
Setting light distance through python in BGE incorrectly sets the light's energy instead of distance

Exact steps for others to reproduce the error
lightDistanceBug.blend
Change lamp's distance in a python script, print to console and verify lamp energy was updated and not distance

**System Information** Ubuntu 14.04 and Windows 7 32-bit Graphics card Nvidia 8800 gtx **Blender Version** Broken: 2.71 official release and newer (698a9a2) Worked: 2.70a **Short description of error** Setting light distance through python in BGE incorrectly sets the light's energy instead of distance **Exact steps for others to reproduce the error** [lightDistanceBug.blend](https://archive.blender.org/developer/F99819/lightDistanceBug.blend) Change lamp's distance in a python script, print to console and verify lamp energy was updated and not distance
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @thatonejonguy

Added subscriber: @thatonejonguy
Author

Forgot to mention in the description that this behavior affects both point (normal) and spot type lamps

Forgot to mention in the description that this behavior affects both point (normal) and spot type lamps

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by a21a9ddbce

This issue was referenced by a21a9ddbce1dd28c09843eb1f3b52d227443fc64

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a21a9ddbce.

Closed by commit a21a9ddbce.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41204
No description provided.