Fix T41204 Python KX_lightObject.distance bug by Jon Szabo (thatonejonguy)

Reviewers: dfelinto

Subscribers: thatonejonguy

Projects: #game_engine

Differential Revision: https://developer.blender.org/D689